--- a/src/1_gettingstarted/3_texture/CMakeLists.txt
+++ b/src/1_gettingstarted/3_texture/CMakeLists.txt
@@ -1,2 +1,3 @@
 Xi_getTargetNameRel(GLAD_NAME libraries/GLAD)
-Xi_addTarget(MODE EXE LIBS opengl32 glfw3dll ${GLAD_NAME})
+Xi_getTargetNameRel(STB_IMAGE_NAME libraries/stb_image)
+Xi_addTarget(MODE EXE LIBS opengl32 glfw3dll ${GLAD_NAME} ${STB_IMAGE_NAME})
